--- a/configs/rbox_cnn_resnet101.config
+++ b/configs/rbox_cnn_resnet101.config
@@ -128,7 +128,7 @@ train_config: {
   num_steps: 120000
 #--------------------------------------------------------------------------------
   gradient_clipping_by_norm: 10.0
-  fine_tune_checkpoint: "PATH_TO_BE_CONFIGURED"
+  fine_tune_checkpoint: "/content/10th/faster_rcnn_resnet101_coco_11_06_2017"
   from_detection_checkpoint: true
   data_augmentation_options {
     random_horizontal_flip_rbox {
@@ -164,9 +164,9 @@ eval_config: {
 
 eval_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED"
+    input_path: "/content/drive/My Drive/findShip/tfrecords/test.tfrecord"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED"
+  label_map_path: "/simplified_rbox_cnn/configs/label_map.pbtxt"
   shuffle: false
   num_readers: 1
   image_dtype: "uint8"
