--- a/configs/rbox_cnn_resnet101.config
+++ b/configs/rbox_cnn_resnet101.config
@@ -129,7 +129,7 @@ train_config: {
 #--------------------------------------------------------------------------------
   gradient_clipping_by_norm: 10.0
   fine_tune_checkpoint: "/content/10th/faster_rcnn_resnet101_coco_11_06_2017/model.ckpt.index"
-  from_detection_checkpoint: true
+  #from_detection_checkpoint: true
   data_augmentation_options {
     random_horizontal_flip_rbox {
     }
