--- a/configs/rbox_cnn_resnet101.config
+++ b/configs/rbox_cnn_resnet101.config
@@ -147,9 +147,9 @@ train_config: {
 
 train_input_reader: {
   tf_record_input_reader {
-    input_path: "PATH_TO_BE_CONFIGURED"
+    input_path: "/content/drive/My Drive/findShip/tfrecords/train.tfrecord"
   }
-  label_map_path: "PATH_TO_BE_CONFIGURED"
+  label_map_path: "/simplified_rbox_cnn/configs/label_map.pbtxt"
   image_dtype: "uint8"
 }
 
